fix width of articles for readability

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -1,5 +1,7 @@
 article {
   line-height: 1.5;
+  max-width: 40em;
+  margin: auto auto;
 
   img {
     max-width: 100%;
